added oscillator with toneJS

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-scripts": "2.1.1",
-    "react-waypoint": "^8.1.0"
+    "react-waypoint": "^8.1.0",
+    "tone": "^13.8.25"
   },
   "scripts": {
     "start": "react-scripts start",
