--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "iblog_outbreak",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://www.meltingasphalt.com.com/interactive/outbreak",
+  "homepage": "https://sduquemesa.github.io/coronavirus-soundscape",
   "dependencies": {
     "@material-ui/core": "^3.5.1",
     "@material-ui/lab": "^3.0.0-alpha.23",
@@ -18,7 +18,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -29,5 +31,7 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "devDependencies": {}
+  "devDependencies": {
+    "gh-pages": "^3.0.0"
+  }
 }
